chore(owners): Update Power Management component owners
Add myself as a component owner for Power Management.

Signed-off-by: Kendall Willis <k-willis@ti.com>

--- a/.github/component-owners.yml
+++ b/.github/component-owners.yml
@@ -97,6 +97,7 @@ components:
   source/linux/Foundational_Components/Power_Management:
     - DhruvaG2000
     - vishalmti
+    - kwillis01
 
   source/linux/Foundational_Components/Graphics:
     - Antonios-C
